force-app/main/default/objects/PRM_SRM_Setting__mdt/PRM_SRM_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Contains the mapping to assign PRM &amp; SRM to Contact records.</description>
    <label>PRM &amp; SRM Setting</label>
    <pluralLabel>PRM &amp; SRM Settings</pluralLabel>
</CustomObject>