force-app/main/default/objects/PRM_SRM_Setting__mdt/fields/Opportunity_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type_Name__c</fullName>
    <description>Enter the Record Type Name (DeveloperName) of Opportunity.</description>
    <inlineHelpText>Enter the Record Type Name (DeveloperName) of Opportunity.</inlineHelpText>
    <label>Opportunity Record Type Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>