force-app/main/default/objects/PRM_SRM_Setting__mdt/fields/PRM_Username__c.field-meta.xml
<CustomField>
    <fullName>PRM_Username__c</fullName>
    <description>Enter the username of user who is going to be PRM.</description>
    <inlineHelpText>Enter the username of user who is going to be PRM.</inlineHelpText>
    <label>PRM Username</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>