force-app/main/default/objects/PRM_SRM_Setting__mdt/fields/SRM_Username__c.field-meta.xml
<CustomField>
    <fullName>SRM_Username__c</fullName>
    <description>Enter the username of user who is going to be SRM.</description>
    <inlineHelpText>Enter the username of user who is going to be SRM.</inlineHelpText>
    <label>SRM Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>