force-app/main/default/objects/PRM_SRM_Setting__mdt/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Enter the State and if not available then enter &apos;Blank&apos;.</description>
    <inlineHelpText>Enter the State and if not available then enter &apos;Blank&apos;.</inlineHelpText>
    <label>State</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>