force-app/main/default/objects/PRM_SRM_Setting__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Opportunity_Record_Type_Name__c</columns>
    <columns>State__c</columns>
    <columns>PRM_Username__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
    <language>en_US</language>
</ListView>